clenaup api folder add optimize vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
+  "cleanUrls": true,
   "rewrites": [
     {
-      "source": "/api/:path*",
+      "source": "/api/(.*)",
       "destination": "/api/proxy"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
